# signup-sequencer

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  Readme.md  SECURITY.md  build.rs  clippy.toml  compose.yml  criterion.rs  cspell.json  example.env  kustomization.yml  mit-license.md  recipe.json  relyance.yaml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/: setup-rust.yml
.github/pending-workflows/: docker.yml
.github/workflows/: audit.yml  batching-build-test-deploy.yml  build-image-and-publish.yml  build-test-deploy.yml  build.yml  cargo-vet.yml  cd.yml  ci.yml  clippy.yml  coverage.yaml  deploy-gke.yml  docker.yml  gke.yml  phone-build-test-deploy.yml  relyance-sci.yml  relyance.yml  test.yml  update-deployment.yaml
benches/: criterion.rs
crates/cognitoauth/: Cargo.toml  README.md
crates/cognitoauth/src/: cognito_srp_auth.rs  error.rs  lib.rs
crates/docker-utils/: Cargo.toml
crates/micro-oz/: Cargo.toml
crates/micro-oz/src/: lib.rs  main.rs  server.rs
crates/oz-api/: Cargo.toml
crates/oz-api/src/: auth.rs  error.rs  lib.rs
crates/oz-api/src/data/transactions/: mod.rs
crates/oz-api/src/typed_request_builder/: mod.rs
crates/postgres-docker-utils/: Cargo.toml
crates/test-utils/: Cargo.toml
crates/tx-sitter/: Cargo.toml
crates/tx-sitter-client/: Cargo.toml
crates/tx-sitter-client/src/: data.rs  lib.rs
crates/tx-sitter-client/src/data/: decimal_u256.rs
deploy/: Chart.yaml  batching-main-stage.values.yaml  dashboard.json  generate.py  main-stage.values.yaml  phone-main-prod.values.yaml  phone-main-stage.values.yaml  prod.values.yaml  stage-manual.values.yaml  values.main-stage.yaml  values.prod.yaml  values.stage-manual.yaml  values.yaml
deploy/templates/: NOTES.txt  _helpers.tpl  base-auth-middleware.yaml  cors.yaml  deployment.yaml  ebs-volumes.yaml  ebs-wipe.yaml  headless-service.yaml  ingress.yaml  network-policy.yaml  service.yaml  statefulset.yaml
docs/: test-identities
docs/images/: flows.drawio  sequencer_deps.drawio  sequencer_ha.drawio
e2e_tests/: compose.yml  create_identities.sh
e2e_tests/docker-compose/: compose.yml  start_chain.sh  start_sequencer.sh  start_tx_sitter.sh  stop_all.sh
e2e_tests/docker-compose-offchain/: compose.yml
e2e_tests/scenarios/: Cargo.toml
e2e_tests/scenarios/tests/: insert_100.rs  insert_delete_insert.rs  insert_restart_insert.rs  offchain_insert_3k.rs  offchain_insert_delete_insert.rs  offchain_insert_restart_insert.rs  onchain_insert_100.rs  onchain_insert_delete_insert.rs  onchain_insert_restart_insert.rs
e2e_tests/scenarios/tests/common/: abi.rs  api.rs  chain.rs  docker_compose.rs  mod.rs
kubernetes/: deployment.yml  service.yml
migrations/: 002_batch_sizes.sql  006_deletions.sql  008_prover_type.sql  011_drop_root_uniqueness.sql  Readme.md
patches/ark-relations/: Cargo.toml
patches/ark-relations/src/r1cs/: trace.rs
schemas/: database.sql  openapi-v2.yaml  openapi-v3.yaml  openapi.yaml
schemas/database/: 001_create_identities.sql  001_deletions.sql  001_init.sql  001_initial.sql  002.init.down.sql  002_batch_sizes.sql  002_create_root_history.sql  002_event_log.sql  002_pending_identities.sql  003_pending_identities.sql  003_unprocessed_identities.sql  004_change_mined_to_finalized.sql  004_identities.up.sql  004_pending_identities_relative_idx.sql  004_pending_transactions.sql  004_remove_assigned_leaf_idx.sql  005_add_eligibility_timestamp.sql  005_add_elligibility_timestamp.sql  005_store_parsed_logs.sql  005_unprocessed_identities.sql  006_delete_pending_duplicates.sql  006_deletions.sql  006_pending_transactions.sql  007_pending_identity_status.sql  007_pending_transactions.sql  007_recoveries.sql  008_prover_type.sql  009_latest_deletion_root.sql  010_latest_insertion_timestamp.sql  012_add_missing_indexes.sql  013_batches_and_transactions.down.sql  013_batches_and_transactions.sql  013_batches_and_transactions.up.sql  014_reintroduce_root_uniqueness.down.sql  016_drop_explicit_timers.down.sql  (+25 more)
sol/: IncrementalBinaryTree.json  MiMC.json  Pairing.json  PoseidonT3.json  PoseidonT6.json  Semaphore.json  SemaphoreVerifier.json  SemaphoreVerifier20.json  SequencerVerifier.json  SimpleStateBridge.json  SimpleVerifier.json  UnimplementedTreeVerifier.json  Verifier.json  VerifierLookupTable.json  WorldIDIdentityManager.json  WorldIDIdentityManagerImplV1.json  WorldIDIdentityManagerImplV2.json
solidity/: .gitignore  .solhint.json  buidler.config.ts  package-lock.json  package.json  tsconfig.json
src/: app.rs  chain_subscriber.rs  config.rs  database.rs  db.rs  ethereum_subscriber.rs  event_bus.rs  hash.rs  identity.rs  identity_committer.rs  identity_tree.rs  lib.rs  main.rs  merkle_tree.rs  mimc_hash.rs  mimc_tree.rs  poseidon_tree.rs  prometheus.rs  prover.rs  secret.rs  serde_utils.rs  server.rs  shutdown.rs  solidity.rs  task_monitor.rs  timed_read_progress_lock.rs  timed_rw_lock.rs  tree.rs  utils.rs  walletclaims_contract.rs
supply-chain/: audits.toml  config.toml
tests/: add_remove_readd_identity.rs  api_v3_integration.rs  delete_identities.rs  delete_identity.rs  delete_identity_padded.rs  delete_padded_identity.rs  dynamic_batch_sizes.rs  graceful_shutdown.rs  identity_history.rs  immediate_deletion.rs  immediate_deletion_of_continuous_set_of_identities.rs  insert_identity_and_proofs.rs  insert_not_full_identities_batch_when_deletion_batch_is_ahead.rs  integration-tests.rs  integration_tests.rs  jwt_auth.rs  malformed_payload.rs  more_identities_than_dense_prefix.rs  multi-database-tests.rs  multi_prover.rs  recover_identities.rs  recover_identity.rs  serializable_transaction.rs  tree_restore_empty.rs  tree_restore_multiple_commitments.rs  tree_restore_one_commitment.rs  tree_restore_with_root_back_to_init.rs  tree_restore_with_root_back_to_middle.rs  unavailable_prover.rs  unreduced_identity.rs  validate_proof_with_age.rs  validate_proofs.rs
(+167 files in other folders)
