[package]
name = "signup-sequencer"
version = "2.0.0"
authors = [
    "Remco Bloemen <remco@worldcoin.org>",
    "Lucas Ege <lucas@worldcoin.org>",
]
edition = "2021"
homepage = "https://github.com/worldcoin/signup-sequencer"
repository = "https://github.com/worldcoin/signup-sequencer"
description = "A tool that processes WorldID signups on-chain."
keywords = ["worldcoin", "protocol", "signup"]
categories = ["cryptography::cryptocurrencies"]
readme = "Readme.md"
license-file = "LICENSE.md"
build = "build.rs"

[workspace]
members = ["crates/*", "e2e_tests/scenarios"]

[features]
default = []

[dependencies]
anyhow = { version = "1.0.68" }
async-stream = "0.3.3"
async-trait = "0.1.64"
axum = "0.7.7"
axum-server = "0.7.1"
tower-http = { version = "0.6.1", features = ["catch-panic"] }
bytes = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "901ea26e478c81e10d5d4355ac628ab7b15afca7" }
config = "0.13.4"
ethers = { version = "2.0.10", features = ["ws", "ipc", "openssl", "abigen"] }
ethers-solc = "2.0.10"
eyre = "0.6"
futures = "0.3"
futures-util = { version = "^0.3" }
hex = "0.4.3"
hex-literal = "0.4.1"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = { version = "1.4.1", features = ["server", "http1", "http2"] }
indoc = "2.0.4"
once_cell = "1.8"
oz-api = { path = "crates/oz-api" }
# We need upstream PR#465 to fix #272.
prometheus = "0.13.3"
reqwest = { version = "0.12.8", features = ["json"] }
ruint = { version = "1.12.3", features = ["primitive-types", "sqlx"] }
semaphore-rs = { version = "0.3.1", features = ["depth_30"] }
semaphore-rs-poseidon = { version = "0.3.1" }
semaphore-rs-trees = { version = "0.3.1" }
semaphore-rs-hasher = { version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "any",
    "postgres",
    "chrono",
] }
take_mut = "0.2.2"
tempfile = "3.5.0"
thiserror = "1.0"
tokio = { version = "1.38", features = [
    "signal",
    "macros",
    "rt",
    "sync",
    "time",
    "rt-multi-thread",
    "tracing",
    "test-util",
] }
toml = "0.8.8"
tracing = "0.1"
tracing-futures = "0.2"
tx-sitter-client = { path = "crates/tx-sitter-client" }
url = { version = "2.2", features = ["serde"] }
zeroize = "1.6.0"
dotenvy = "0.15.0"

[dev-dependencies]
hex = "0.4.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
micro-oz = { path = "crates/micro-oz" }
postgres-docker-utils = { path = "crates/postgres-docker-utils" }
regex = { version = "1.7.1", features = ["std"] }
semaphore-rs = { version = "0.3.1", features = ["depth_20"] }
similar-asserts = "1.5.0"
test-case = "3.0"
testcontainers = "0.15.0"
testcontainers-modules = { version = "0.3.7", features = ["postgres"] }
tracing-subscriber = "0.3.11"
tracing-test = "0.2"

[patch.crates-io]
# Necessary until https://github.com/recmo/uint/pull/400 is merged and released
ruint = { git = "https://github.com/Dzejkop/uint", rev = "9a1a6019c519e9cd76add2494190d21fc5f574f9" }

[profile.release]
overflow-checks = true
lto = "thin"
debug = true
