[package]
name = "micro-oz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

anyhow = "1.0.72"
async-trait = "0.1.71"
axum = "0.6.19"
chrono = "0.4.26"
clap = { version = "4.3.14", features = ["env", "derive"] }
ethers = { version = "2.0.10", features = ["openssl"] }
hyper = "0.14.27"
oz-api = { path = "../oz-api" }
serde = "1.0.171"
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
