[package]
name = "oz-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
ethers = { version = "1.0.0", features = [ "ws", "ipc", "openssl", "abigen" ] }
reqwest = "0.11.14"
serde = { version = "1.0.154", features = ["derive"] }
