[package]
name = "tx-sitter-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
ethers = { version = "2.0.10", features = [ ] }
reqwest = "0.11.14"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
indoc = "2"
