[package]
name = "tx-sitter-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "901ea26e478c81e10d5d4355ac628ab7b15afca7" }

anyhow = "1.0"
ethers = { version = "2.0.10", features = [ ] }
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.94"
strum = { version = "0.25", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
indoc = "2"
