[package]
name = "e2e-tests"
version = "0.1.0"
edition = "2021"
description = "A tool that processes WorldID signups on-chain."
keywords = ["worldcoin", "protocol", "signup"]
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/worldcoin/signup-sequencer"
readme = "./../../Readme.md"
license-file = "./../../LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signup-sequencer = { path = "./../.." }

anyhow = "1.0"
ethers = { version = "2.0.10" }
hex = "0.4.3"
hex-literal = "0.4.1"
hyper = { version = "^0.14.17", features = ["tcp", "http1", "http2", "client"] }
rand = "0.8.5"
retry = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3.11"
tracing-test = "0.2"
